force-app/main/default/objects/Expense__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <description>This field is created to hold detailed description of expense</description>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>