force-app/main/default/objects/Expense__c/fields/WBS_COde__c.field-meta.xml
<CustomField>
    <fullName>WBS_COde__c</fullName>
    <label>WBS COde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>